--- a/one_page_website/index.html
+++ b/one_page_website/index.html
@@ -5,9 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/23201b1344.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="./css/mobile.css">
-  <link rel="stylesheet" href="./css/widescreen.css">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" media="screen and (max-width:768px)" href="./css/mobile.css">
+  <link rel="stylesheet"media="screen and (min-width:1100px)" href="./css/widescreen.css">
   <title>Edgeledger financial | Accounts</title>
 </head>
 <body id="home">
@@ -15,7 +15,7 @@
   <nav id="navbar">
     <h1 class="logo">
       <span class="text-primary">
-        <i class="fas fa-book-open"></i> Edge </span>Ledger</h1>
+        <i class="fas fa-book-open"></i> Edge</span>Ledger</h1>
       <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#what">What</a></li>
@@ -30,7 +30,7 @@
       <h1 class="l-heading">
         The Sky Is The Limit
       </h1>
-      <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque soluta nostrum eaque necessitatibus autem sed?</p>
+      <p class="lead">We will insure you that after connecting with us your all financial problems is ours and we have a solution for your every problem.</p>
       <a href="#what" class="btn">Read More</a>
     </div>
   </header>
@@ -43,17 +43,17 @@
         <div class="item">
           <i class="fas fa-university fa-2x"></i>
           <h3>Investment Banking</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae mollitia eius minus veritatis?</p>
+          <p>We take your money and invest it in diverse investment with minimal risk and higher returns. </p>
         </div>
         <div class="item">
           <i class="fas fa-book-reader fa-2x"></i>
           <h3>Portfolio Management</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae mollitia eius minus veritatis?</p>
+          <p>We manage your portfolio and we will tell u what to sell what to buy till when u have to hold.In equity,commodity and crypto</p>
         </div>
         <div class="item">
           <i class="fas fa-pencil-alt fa-2x"></i>
           <h3>Tax & Custodial</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae mollitia eius minus veritatis?</p>
+          <p>We manage your taxes and how your taxes can be filled with higher profitability.</p>
         </div>
       </div>
     </div>
@@ -64,14 +64,14 @@
     <div class="who-img"></div>
     <div class="who-content bg-dark p-2">
       <h2 class="m-heading"><span class="text-primary">Who</span> We Are</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique porro quod fuga veritatis, expedita ipsam. Dolorem alias iste quibusdam. Dignissimos, esse perferendis. Ipsa, modi quos recusandae dolor aliquam odio architecto.</p>
+      <p>We are Professionals with minimum 4-5 years of experience in this field.Our every team member is best in his role.Everyone takes their responsibility and ensure that our client can sleep peacefully.</p>
       <h3>Our Team</h3>
       <ul class="list">
-        <li>Mark Smith: CEO</li>
-        <li>Shannon Johnson: CFO</li>
-        <li>Rock John: Lead Accountant</li>
-        <li>Janet Williams: Investment Manager</li>
-        <li>Lara Jackson: Senior Accountant</li>
+        <li>Shravan Sutar: CEO</li>
+        <li>Rohit Kadu: CFO</li>
+        <li>Harshal Jori: Lead Accountant</li>
+        <li>Aniket Vasve: Investment Manager</li>
+        <li>Prasad Doiphode: Senior Accountant</li>
       </ul>
     </div>
   </section>
@@ -117,10 +117,24 @@
     </div>
     <div class="map"></div>
   </section>
+
+  <!-- footer -->
+  <footer id="main-footer" class="bg-dark py-1 text-center" >
+    <div class="container">
+      <p>Copyright &copy; 2019, Edgeledger, All Rights Reserved</p>
+    </div>
+  </footer>
+
+
+  <!-- jquery -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
+  <!-- local js file -->
   <script src="js/main.js"></script>
 
+  <!-- google maps -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAD1bDXM14nFSX8dRbZV-nT_RuCA6RInUo&callback=initMap" async defer>
   </script>
 </body>
 </html>
-
